Implementacion del prestamo automatico
